--- a/documents/Final Document/09-futurework.tex
+++ b/documents/Final Document/09-futurework.tex
@@ -1,1 +1,9 @@
-Future work.
+A continuación se enuncian aquellas actividades que, por una u otra razón, no fueron tratadas en el contexto del presente proyecto, sin embargo, podrían hacer parte de futuras discusiones. \\
+
+\begin{enumerate}
+
+\item Comparar el rendimiento de Apache Oozie frente a otras alternativas como Apache Falcon o Apache NiFi.
+
+\item Explorar cómo se podrían aprovechar las tablas de Hive con buckets desde Pig, mediante HCatalog.
+
+\end{enumerate}
